Fin de la encabezado principal

--- a/index.html
+++ b/index.html
@@ -7,17 +7,22 @@
 	<LINK REL=StyleSheet HREF="C:\Users\dayana\Documents\GitHub\Parcial\estilo.css" TYPE="text/css" MEDIA=screen>
 </head>
 <body>
-	<header id="encabezado" > <!--INICIO DEL ENCABEZADO-->
-		<center><h1> ENCABEZADOo</h1></center>
-
-		<nav><!--INICIO DE MENU DE NAVEGACION --> 
-			<ul id= "menu_navegacion"> <!-- INICIO  DE LISTA DE NAVEGACION --> 
-				<li> <a href="novedades.html">Novedades</a></li>
-			</ul> <! -- FIN DE LISTA DE NAVEGACION -->
-		</nav> <!-- FIN DE MENU DE NAVEGACION -->
-	</header><!-- FIN DEL ENCABEZADO-->
-	<br> <br> 
-	<section> <!--INICIO DE  PRIMERA ENTRADA -->
+	<section id="main_container">
+		<header class="header" > <!--INICIO DEL ENCABEZADO-->
+			<center>	
+				<img src="li-7.jpg" width="700" height="260" > <!--IMAGEN DEL ENCABEZADO-->
+			</center>
+			<br>
+			<nav class="top_menu"><!--INICIO DE MENU DE NAVEGACION --> 
+				<ul id= "menu_navegacion"> <!-- INICIO  DE LISTA DE NAVEGACION --> 
+					<li> <a href="novedades.html">Home</a></li>
+					<li> <a href="novedades.html">Novedades</a></li>
+				</ul> <! -- FIN DE LISTA DE NAVEGACION -->
+			</nav> <!-- FIN DE MENU DE NAVEGACION -->
+		</header><!-- FIN DEL ENCABEZADO-->
+	</section>
+	<br> <br> <br>
+		<section> <!--INICIO DE  PRIMERA ENTRADA -->
 		<article>  <!--INICIO DE LA INFORMACION DE LA ENTRADA -->
 			<header id="header">  <!-- INICIO DE ENCABEZADO DE LA ENTRADA -->
 				<p>  16 de febrero del 2017 </p>  <!-- FECHA DE LA ENTRADA-->
