Se cambio la portada y el fondo del Blog

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 <body>
 	<section id="main_container">
 		<header class="header" > <!--INICIO DEL ENCABEZADO-->
-			<center>	
-				<img src="li-7.jpg" width="700" height="260" > <!--IMAGEN DEL ENCABEZADO-->
+			<center>
+				<br><br>	
+				<h1> "Ya casi es hora de que empiece a dedicarte mi insomnio" </h1>
+				<p>-Mario Benedetti</p>
 			</center>
 			<br>
 			<nav class="top_menu"><!--INICIO DE MENU DE NAVEGACION --> 
@@ -22,7 +24,7 @@
 		</header><!-- FIN DEL ENCABEZADO-->
 	</section>
 	<br> <br> <br>
-		<section> <!--INICIO DE  PRIMERA ENTRADA -->
+		<section class= E1> <!--INICIO DE  PRIMERA ENTRADA -->
 		<article>  <!--INICIO DE LA INFORMACION DE LA ENTRADA -->
 			<header id="header">  <!-- INICIO DE ENCABEZADO DE LA ENTRADA -->
 				<p>  16 de febrero del 2017 </p>  <!-- FECHA DE LA ENTRADA-->
