--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 		<header class="header" > <!--INICIO DEL ENCABEZADO-->
 			<center>
 				<br><br>	
-				<h1> "Ya casi es hora de que empiece a dedicarte mi insomnio" </h1>
-				<p>-Mario Benedetti</p>
+				<h1> "Ya casi es hora de que empiece a dedicarte mi insomnio" </h1> <!--INICIO DE PORTADA-->
+				<p>-Mario Benedetti</p> <!--FIN DE PORTADA-->
 			</center>
 			<br>
 			<nav class="top_menu"><!--INICIO DE MENU DE NAVEGACION --> 
@@ -24,13 +24,15 @@
 		</header><!-- FIN DEL ENCABEZADO-->
 	</section>
 	<br> <br> <br>
-		<section class= E1> <!--INICIO DE  PRIMERA ENTRADA -->
-		<article>  <!--INICIO DE LA INFORMACION DE LA ENTRADA -->
+		<section id="header"> <!--INICIO DE  PRIMERA ENTRADA -->
+		<article id="ar1">  <!--INICIO DE LA INFORMACION DE LA ENTRADA -->
 			<header id="header">  <!-- INICIO DE ENCABEZADO DE LA ENTRADA -->
 				<p>  16 de febrero del 2017 </p>  <!-- FECHA DE LA ENTRADA-->
 				<center><h2> El vendedor de sueños </h2></center> <!--TITULO DE LA ENTRADA -->
 			</header> <!--FIN DE ENCABEZADO DE LA ENTRADA -->
-			    <img src="" alt=""> <!--IMAGEN DE LA ENTRADA -->
+				<figure>
+					<img src="C:\Users\dayana\Documents\GitHub\Parcial\libro1.jpg" width="120" height="200"> <!--IMAGEN DE LA ENTRADA -->
+				</figure>
 				<P> El personaje principal de este libro, el vendedor de sueños, está dotado de un gran atrevimiento. Proclama a los cuatro vientos que las sociedades modernas se han convertido en un gran manicomio global, donde lo normal es estar ansioso y estresado, y lo anormal es ser saludable, tranquilo y sereno. Con una elocuencia cautivadora, estimula la mente de todos los que pasan por su vida, ya sea en las calles, en las empresas, en los centros comerciales o en las escuelas, torpedeando siempre a las personas con innumerables preguntas  
 				</P>  
 				<aside>
