Se agrego estrella de calificacion al primer articulo del blog

--- a/index.html
+++ b/index.html
@@ -36,8 +36,17 @@
 				<P> El personaje principal de este libro, el vendedor de sueños, está dotado de un gran atrevimiento. Proclama a los cuatro vientos que las sociedades modernas se han convertido en un gran manicomio global, donde lo normal es estar ansioso y estresado, y lo anormal es ser saludable, tranquilo y sereno. Con una elocuencia cautivadora, estimula la mente de todos los que pasan por su vida, ya sea en las calles, en las empresas, en los centros comerciales o en las escuelas, torpedeando siempre a las personas con innumerables preguntas  
 				</P>  
 				<aside>
-					<p> no hay comentarios</p>
-					<p> CURY, AUGUSTO - libro unico</p>
+					<div class="ec-stars-wrapper">  <!--INICIO DE ESTRELLAS DE CALIFICACION -->
+						<a href="#" data-value="1" title="Votar con 1 estrellas">&#9733;</a>
+						<a href="#" data-value="2" title="Votar con 2 estrellas">&#9733;</a>
+						<a href="#" data-value="3" title="Votar con 3 estrellas">&#9733;</a>
+						<a href="#" data-value="4" title="Votar con 4 estrellas">&#9733;</a>
+						<a href="#" data-value="5" title="Votar con 5 estrellas">&#9733;</a>
+					</div> <!--FIN DE ESTRELLAS DE CALIFICACION -->
+					<center>
+						<p> no hay comentarios</p>
+						<p> CURY, AUGUSTO - libro unico</p>
+					</center>
 				</aside>	
 		</article> <!--FIN  DE LA INFORMACION DE LA ENTRADA --> 
 	</section> <!--FIN DE LA PRIMERA ENTRADA -->
