Se modifico el estilo al segundo articulo incluyendo estrellas de calificacion

--- a/index.html
+++ b/index.html
@@ -51,19 +51,30 @@
 		</article> <!--FIN  DE LA INFORMACION DE LA ENTRADA --> 
 	</section> <!--FIN DE LA PRIMERA ENTRADA -->
 	<br> <br> 
-	<section> <!--INICIO DE LA SEGUNDA ENTRADA -->
-		<article>  <!-- INICIO DE LA INFORMACION DE LA ENTRADA -->
+	<section id="header"> <!--INICIO DE LA SEGUNDA ENTRADA -->
+		<article id=ar1>  <!-- INICIO DE LA INFORMACION DE LA ENTRADA -->
 			<header id="header">
 				<p>  12 de febrero del 2017 </p>  <!-- FECHA DE LA ENTRADA-->
 				<center><h2> Ciudades de papel </h2></center> <!--TITULO DE LA ENTRADA -->	
 			</header>
-				<img src="" alt=""> <!--IMAGEN DE LA ENTRADA -->
+				<figure>
+					<img src= "C:\Users\dayana\Documents\GitHub\Parcial\libro2.jpg" width="120" height="200"> <!--IMAGEN DE LA ENTRADA -->
+				</figure>
 				<P> La historia gira en torno a dos adolescentes, en su último año de secundaria, que viven en Orlando, Florida: Quentin Jacobsen ("Q"), y Margo Roth Spiegelman. Aunque Q está perdidamente enamorado de Margo, pertenecen a "dos mundos diferentes". Ella es popular y llamativa mientras que Q es un poco nerd.
 				Sin embargo, una noche Margo se presenta en casa de Q, vestida de Ninja, para que la ayude a acometer una venganza en contra de su novio (Jese), quien la está engañando con Becca.
 				</P>  
 				<aside>
-					<p> no hay comentarios</p>
-					<p> JOAH GREEN - libro unico</p>
+					<div class="ec-stars-wrapper">  <!--INICIO DE ESTRELLAS DE CALIFICACION -->
+						<a href="#" data-value="1" title="Votar con 1 estrellas">&#9733;</a>
+						<a href="#" data-value="2" title="Votar con 2 estrellas">&#9733;</a>
+						<a href="#" data-value="3" title="Votar con 3 estrellas">&#9733;</a>
+						<a href="#" data-value="4" title="Votar con 4 estrellas">&#9733;</a>
+						<a href="#" data-value="5" title="Votar con 5 estrellas">&#9733;</a>
+					</div> <!--FIN DE ESTRELLAS DE CALIFICACION -->
+					<center>
+						<p> no hay comentarios</p>
+						<p> JOAH GREEN - libro unico</p>
+					</center>
 				</aside>	
 		</article>  <!--FIN DE LA INFORMACION DE LA ENTRADA -->
 	</section> <!--FIN DE LA SEGUNDA  ENTRADA -->
