Se modifico el estilo a la barra lateral - derecha

--- a/index.html
+++ b/index.html
@@ -23,7 +23,34 @@
 			</nav> <!-- FIN DE MENU DE NAVEGACION -->
 		</header><!-- FIN DEL ENCABEZADO-->
 	</section>
-	<br> <br> <br>
+	<br><br>
+	<aside id="aside1"> <!-- INICIO DE BARRA LATERAL-->
+		<br><br>
+		<div>  <!-- INICIO DE LA PRIMERA SESION -->
+			<b>Paginas en facebook</b>
+			<img src="">
+		</div> <!-- FIN DE LA PRIMERA SESION -->
+		<br><br>
+		<div> <!-- INICIO DE LA SEGUNDA SESION -->
+			<b>Instagram</b>
+			<img src="">	
+		</div> <!-- FIN DE LA SEGUNDA SESION -->
+		<br><br>
+		<div> <!-- INICIO DE LA TERCERA SESION -->
+			<p>
+			En este blog no hay archivos almacenados,solamente se recopilan anlaces que ya circulan por Internet
+			esto es caracter academico.
+			</p>
+		</div> <!-- FIN  DE LA TERCERA SESION -->
+		<br><br>
+		<div> <!-- INICIO DE LA CUARTA SESION -->
+			<b> Seguidores </b>
+			<img src="">
+		</div> <!-- FIN  DE LA CUARTA SESION -->
+			<br><br><br>
+	</aside> <!-- FIN DE LA BARRA LATERAL -->
+
+	<br> <br> 
 		<section id="header"> <!--INICIO DE  PRIMERA ENTRADA -->
 		<article id="ar1">  <!--INICIO DE LA INFORMACION DE LA ENTRADA -->
 			<header id="header">  <!-- INICIO DE ENCABEZADO DE LA ENTRADA -->
@@ -33,7 +60,7 @@
 				<figure>
 					<img src="C:\Users\dayana\Documents\GitHub\Parcial\libro1.jpg" width="120" height="200"> <!--IMAGEN DE LA ENTRADA -->
 				</figure>
-				<P> El personaje principal de este libro, el vendedor de sueños, está dotado de un gran atrevimiento. Proclama a los cuatro vientos que las sociedades modernas se han convertido en un gran manicomio global, donde lo normal es estar ansioso y estresado, y lo anormal es ser saludable, tranquilo y sereno. Con una elocuencia cautivadora, estimula la mente de todos los que pasan por su vida, ya sea en las calles, en las empresas, en los centros comerciales o en las escuelas, torpedeando siempre a las personas con innumerables preguntas  
+				<P ALIGN=left> El personaje principal de este libro, el vendedor de sueños, está dotado de un gran atrevimiento. Proclama a los cuatro vientos que las sociedades modernas se han convertido en un gran manicomio global, donde lo normal es estar ansioso y estresado, y lo anormal es ser saludable, tranquilo y sereno. Con una elocuencia cautivadora, estimula la mente de todos los que pasan por su vida, ya sea en las calles, en las empresas, en los centros comerciales o en las escuelas, torpedeando siempre a las personas con innumerables preguntas  
 				</P>  
 				<aside>
 					<div class="ec-stars-wrapper">  <!--INICIO DE ESTRELLAS DE CALIFICACION -->
@@ -60,7 +87,7 @@
 				<figure>
 					<img src= "C:\Users\dayana\Documents\GitHub\Parcial\libro2.jpg" width="120" height="200"> <!--IMAGEN DE LA ENTRADA -->
 				</figure>
-				<P> La historia gira en torno a dos adolescentes, en su último año de secundaria, que viven en Orlando, Florida: Quentin Jacobsen ("Q"), y Margo Roth Spiegelman. Aunque Q está perdidamente enamorado de Margo, pertenecen a "dos mundos diferentes". Ella es popular y llamativa mientras que Q es un poco nerd.
+				<P ALIGN=left> La historia gira en torno a dos adolescentes, en su último año de secundaria, que viven en Orlando, Florida: Quentin Jacobsen ("Q"), y Margo Roth Spiegelman. Aunque Q está perdidamente enamorado de Margo, pertenecen a "dos mundos diferentes". Ella es popular y llamativa mientras que Q es un poco nerd.
 				Sin embargo, una noche Margo se presenta en casa de Q, vestida de Ninja, para que la ayude a acometer una venganza en contra de su novio (Jese), quien la está engañando con Becca.
 				</P>  
 				<aside>
@@ -78,31 +105,7 @@
 				</aside>	
 		</article>  <!--FIN DE LA INFORMACION DE LA ENTRADA -->
 	</section> <!--FIN DE LA SEGUNDA  ENTRADA -->
-	<aside> <!-- INICIO DE BARRA LATERAL-->
-		<br><br>
-		<div>  <!-- INICIO DE LA PRIMERA SESION -->
-			<b>Paginas en facebook</b>
-			<img src="">
-		</div> <!-- FIN DE LA PRIMERA SESION -->
-		<br><br>
-		<div> <!-- INICIO DE LA SEGUNDA SESION -->
-			<b>Instagram</b>
-			<img src="">	
-		</div> <!-- FIN DE LA SEGUNDA SESION -->
-		<br><br>
-		<div> <!-- INICIO DE LA TERCERA SESION -->
-			<p>
-				En este blog no hay archivos almacenados,solamente se recopilan anlaces que ya circulan por Internet
-				esto es caracter academico.
-			</p>
-		</div> <!-- FIN  DE LA TERCERA SESION -->
-		<br><br>
-		<div> <!-- INICIO DE LA CUARTA SESION -->
-			<b> Seguidores </b>
-			<img src="">
-		</div> <!-- FIN  DE LA CUARTA SESION -->
-		<br><br><br>
-	</aside> <!-- FIN DE LA BARRA LATERAL -->
+	
 	<br><br>
 	<footer id ="pie_pagina"> <!-- INICIO DEL PIE DE PAGINA-->
 		<center><h2 id="ancla">PIE DE PAGINA</h2></center>
