Se modifico el estilo de la barra lateral

--- a/index.html
+++ b/index.html
@@ -26,28 +26,33 @@
 	<br><br>
 	<aside id="aside1"> <!-- INICIO DE BARRA LATERAL-->
 		<br><br>
-		<div>  <!-- INICIO DE LA PRIMERA SESION -->
-			<b>Paginas en facebook</b>
-			<img src="">
-		</div> <!-- FIN DE LA PRIMERA SESION -->
-		<br><br>
-		<div> <!-- INICIO DE LA SEGUNDA SESION -->
-			<b>Instagram</b>
-			<img src="">	
-		</div> <!-- FIN DE LA SEGUNDA SESION -->
-		<br><br>
-		<div> <!-- INICIO DE LA TERCERA SESION -->
-			<p>
-			En este blog no hay archivos almacenados,solamente se recopilan anlaces que ya circulan por Internet
-			esto es caracter academico.
-			</p>
-		</div> <!-- FIN  DE LA TERCERA SESION -->
-		<br><br>
-		<div> <!-- INICIO DE LA CUARTA SESION -->
-			<b> Seguidores </b>
-			<img src="">
-		</div> <!-- FIN  DE LA CUARTA SESION -->
-			<br><br><br>
+	    <div align="center">
+			<figure id=f1 > <!-- INICIO DE LA PRIMERA SESION -->
+				<img src="C:\Users\dayana\Documents\GitHub\Parcial\foto_personal.jpg" width="120" height="200">
+			</figure> <!-- FIN DE LA PRIMERA SESION -->
+		</div>																				
+			<br><br>
+			<div> <!-- INICIO DE LA SEGUNDA SESION -->
+				<center>
+				    Dayana Grueso Lopez 
+				    Dayana.gruesol@campusucc.edu.co
+				    Universidad Cooperativa de Colombia
+				</center>
+			</div> <!-- FIN DE LA SEGUNDA SESION -->
+			<br><br>
+			<div> <!-- INICIO DE LA TERCERA SESION -->
+				<center>
+					En este blog no hay archivos almacenados,solamente se recopilan anlaces que ya circulan por Internet
+					esto es caracter academico.
+				</center>
+			</div> <!-- FIN  DE LA TERCERA SESION -->
+			<br><br>
+			<div> <!-- INICIO DE LA CUARTA SESION -->
+				<figure >
+					<img id="f2" src="C:\Users\dayana\Documents\GitHub\Parcial\seguidores.png" >
+				</figure>
+			</div> <!-- FIN  DE LA CUARTA SESION -->
+				<br><br><br>
 	</aside> <!-- FIN DE LA BARRA LATERAL -->
 
 	<br> <br> 
