Fin del proyecto

--- a/Novedades.html
+++ b/Novedades.html
@@ -11,8 +11,8 @@
 		<header class="header" > <!--INICIO DEL ENCABEZADO-->
 			<center>
 				<br><br>	
-				<h1> "Ya casi es hora de que empiece a dedicarte mi insomnio" </h1> <!--INICIO DE PORTADA-->
-				<p>-Mario Benedetti</p> <!--FIN DE PORTADA-->
+				<h1> "Mi diagnostico es sencillo, se que no tengo remedio" </h1> <!--INICIO DE PORTADA-->
+				<p>-Julio cortazar</p> <!--FIN DE PORTADA-->
 			</center>
 			<br>
 			<nav class="top_menu"><!--INICIO DE MENU DE NAVEGACION --> 
