Se añadio fuente y propiedades de fuente al encabezado - se agregaron comentarios al estilo.css para facilitar su entendimiento

--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Universidad Cooperativa de Colombia</title>
 	<LINK REL=StyleSheet HREF="C:\Users\dayana\Documents\GitHub\Parcial\estilo.css" TYPE="text/css" MEDIA=screen>
+	<link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
 </head>
 <body>
 	<section id="main_container">
 		<header class="header" > <!--INICIO DEL ENCABEZADO-->
 			<center>
 				<br><br>	
-				<h1> "Ya casi es hora de que empiece a dedicarte mi insomnio" </h1> <!--INICIO DE PORTADA-->
+				<h1 > "Ya casi es hora de que empiece a dedicarte mi insomnio" </h1> <!--INICIO DE PORTADA-->
 				<p>-Mario Benedetti</p> <!--FIN DE PORTADA-->
 			</center>
 			<br>
@@ -82,7 +83,7 @@
 				</aside>	
 		</article> <!--FIN  DE LA INFORMACION DE LA ENTRADA --> 
 	</section> <!--FIN DE LA PRIMERA ENTRADA -->
-	<br> <br> 
+	<br> <br>  <br><br>
 	<section id="header"> <!--INICIO DE LA SEGUNDA ENTRADA -->
 		<article id=ar1>  <!-- INICIO DE LA INFORMACION DE LA ENTRADA -->
 			<header id="header">
