SE MODIFICO EL MENU DE NAVEGACION PARA QUE SEA RESPONSIVE

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 				<p>-Mario Benedetti</p> <!--FIN DE PORTADA-->
 			</center>
 			<br>
+			<!--INICIO  PARA EL MENU RESPONSIVE-->
+			<input type="checkbox" id="btn_menu">
+			<label for="btn_menu"> <img src="C:\Users\dayana\Documents\GitHub\Parcial\menu.png" width="30" height="30"></label>
+			<!--FIN PARA EL MENU RESPONSIVE-->
 			<nav class="top_menu"><!--INICIO DE MENU DE NAVEGACION --> 
 				<ul id= "menu_navegacion"> <!-- INICIO  DE LISTA DE NAVEGACION --> 
 					<li> <a href="index.html">Home</a></li>
