BARRA LATERAL DEL BLOG CON RESPONSIVE - DESAPARECE LA BARRA LATERAL

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		</header><!-- FIN DEL ENCABEZADO-->
 	</section>
 	<br><br>
-	<aside id="aside1"> <!-- INICIO DE BARRA LATERAL-->
+	<aside id="barra_lateral"> <!-- INICIO DE BARRA LATERAL-->
 		<br><br>
 	    <div align="center">
 			<figure id=f1 > <!-- INICIO DE LA PRIMERA SESION -->
