SE AGREGO EL ICONO DE FACEBOOK EN EL FOOTER

--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
 	
 	<br><br>
 	<footer id ="pie_pagina"> <!-- INICIO DEL PIE DE PAGINA-->
+		<a href="https://www.facebook.com/" > <<img src="C:\Users\dayana\Documents\GitHub\Parcial\icono_facebook.png">></a>
 		<center><h2 id="ancla">PIE DE PAGINA</h2></center>
 	</footer> <!--FIN DEL PIE DE PAGINA-->
 </body>
